[package]
name = "rs_graph_system"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "manager"
path = "src/main.rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6"
kafka = "0.8"
futures="0.3"
serde = "1.0"
serde_json = "1.0"